# entanglenet-ai

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_physics.py
.github/workflows/: ci.yml
configs/: default.yaml
configs/safety/: constraints.yaml
configs/training/: ppo_config.yaml
docs/: architecture.md
philos/: __init__.py
philos/api/: __init__.py  dashboard.html  schemas.py  server.py
philos/cognitive/: __init__.py  base.py  reward_shaping.py
philos/control/: __init__.py  base.py  mpc_solver.py  safety_shield.py  trajectory.py
philos/core/: __init__.py  config.py  context_vector.py  registry.py  state.py
philos/evaluation/: __init__.py  benchmarks.py  metrics.py
philos/learning/: __init__.py  base.py  domain_randomization.py  reward_functions.py
philos/learning/policies/: __init__.py  whole_body.py
philos/perception/: __init__.py  base.py  sensor_fusion.py  vlm_grounding.py  yolo_world.py
philos/ros2_bridge/: __init__.py  bridge.py  topics.py  transforms.py
philos/simulation/: __init__.py  domain_randomizer.py  isaac_env.py
philos/simulation/assets/: ur5e.urdf
philos/simulation/environments/: __init__.py  fetch_sort_task.py  pour_task.py
philos/utils/: urdf_parser.py
scripts/: evaluate.py  launch_api.py  train_rl.py
tests/: test_control.py  test_core.py  test_simulation.py
